<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="comq.mostafa.fci.pets.MainActivity">
    <item
        android:id="@+id/action_done"
        android:orderInCategory="100"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/action_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_dummy_data"
        android:orderInCategory="100"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/action_insert_dummy_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="100"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/action_delete_all_entries"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:title="@string/action_setting"
        app:showAsAction="never" />
</menu>
